src/objects/CO_Line_Item__c.object
<CustomObject>
	<fields>
        <fullName>Actual_Invoice_Date_Time__c</fullName>
        <label>Actual Invoice Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Kit_Price__c</fullName>
        <label>Actual Kit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Retail_Price__c</fullName>
        <label>Actual Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Cost_Coli__c</fullName>
        <label>Adjusted Cost Coli</label>
        <summarizedField>Coli_Fifo_Line_Item_Junction__c.Adjusted_Cost_Fifo__c</summarizedField>
        <summaryForeignKey>Coli_Fifo_Line_Item_Junction__c.CO_Line_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avg_Cost__c</fullName>
        <label>Avg Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bulk_Discount_Percent__c</fullName>
        <formula>IF((!ISBLANK(Deal__c) || !ISBLANK(Option_Fee__c)), 0,
        IF(!ISBLANK(Service_Order_Line_Item__c),  Service_Order_Line_Item__r.Bulk_Discount_Percent__c ,
            IF( !ISBLANK(Part__c ) ,  CO_Header__r.Parts_Bulk_Discount_Percent__c ,
            IF( !ISBLANK( Fee__c ) ,  CO_Header__r.Fees_Bulk_Discount_Percent__c , 0))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_Customer_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the normal price for the customer based on their price level settings.</description>
        <inlineHelpText>This is the normal price for the customer based on their price level settings.</inlineHelpText>
        <label>Calculated Customer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Fixed_KitLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO Fixed KitLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CO_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Kit Header</label>
        <referenceTo>CO_Kit_Header__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Status__c</fullName>
        <formula>TEXT(CO_Header__r.Order_status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_CO_Invoice_link__c</fullName>
        <label>Closed CO Invoice link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to deal</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF( Calculated_Customer_Price__c == 0, 0, 
     IF( Actual_Retail_Price__c == 0, 
       Calculated_Customer_Price__c - (IF($Setup.Configurations__c.Tax_Included_Pricing__c,  
       Price_When_Tax_Included__c ,  Price__c )), 
     Actual_Retail_Price__c - (IF($Setup.Configurations__c.Tax_Included_Pricing__c,  
     Price_When_Tax_Included__c ,  Price__c ))
     )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>    
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Cost__c</fullName>
        <description>Actual Fee Cost - Populated after Finalize.</description>
        <label>Fee Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to indicate that the user has set a fixed price for the Kit.</description>
        <label>Fixed Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Label__c</fullName>
        <formula>IF( Part__c != null, Part__r.Applicable_Tax__r.Forms_Label__c, IF( Fee__c != null, Fee__r.Applicable_Tax__r.Forms_Label__c, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Environmental_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Environmental Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pulled__c</fullName>
        <label>Pulled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Price_Kit__c</fullName>
        <formula>IF(
    Service_Order_Line_Item__c != null,  
    Service_Order_Line_Item__r.Service_Order_Kit_Header__r.Fixed_Price_Flag__c, 
    CO_Kit_Header__r.Fixed_Price_Flag__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Fixed Price Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_In_Merch_Section__c</fullName>
        <formula>AND( Service_Order_Line_Item__c = null, Is_Unresolved_Fulfillment_Exists__c = false, Related_Option_And_Fees__c = null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Merch Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_In_Service_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Service Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Include_in_Pulled_Report__c</fullName>
        <formula>AND(
	Part__c != null,
         IF( Qty__c &lt; 0, Qty_Pulled_Formula__c != Qty__c, Qty_Pulled_Formula__c != Qty_Committed__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Include in Pulled Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Linked_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Linked Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Temporary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unresolved_Fulfillment_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unresolved Fulfillment Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <formula>IF( 
	Part__c != null,  
	Part__r.Part_Number__c &amp; &apos; - &apos; &amp; Part__r.Description__c, 
	IF(
		Fee__c != null,
		Fee__r.Fee_Unique_Name__c,
		&apos;&apos;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part</fullName>
                </value>
                <value>
                    <fullName>Labour</fullName>
                </value>
                <value>
                    <fullName>Sublet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kit_Header_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Header Line Item</label>
        <referenceTo>Kit_Header_Line_Item__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kit_Price_With_Price_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kit Price With Price Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>List_Tax_items_on_forms__c</fullName>
        <formula>IF( Part__c != null, Part__r.Applicable_Tax__r.Forms_List_Taxes__c, IF( Fee__c != null, Fee__r.Applicable_Tax__r.Forms_List_Taxes__c, true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Tax items on forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchandise_Commit_Order_controls__c</fullName>
        <label>Merchandise Commit Order controls</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to option &amp; Fee</description>
        <label>Option &amp; Fee</label>
        <referenceTo>Option_Fee__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Cost_Coli__c</fullName>
        <label>Original Cost Coli</label>
        <summarizedField>Coli_Fifo_Line_Item_Junction__c.Avg_Cost__c</summarizedField>
        <summaryForeignKey>Coli_Fifo_Line_Item_Junction__c.CO_Line_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oversold_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oversold Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_To_Pull_Sale_Type__c</fullName>
        <formula>IF(
	Part__c != null,
	IF(
		Service_Order_Line_Item__c = null,
		IF(
			Deal__c != null,
			&quot;Parts - Deal&quot;,
			&quot;Parts - Customer&quot;
		),
		IF(
			OR(
				ISPICKVAL(Service_Order_Line_Item__r.Service_Order_Header__r.Transaction_Type__r.Type__c, &apos;Deal Service&apos;),
				ISPICKVAL(Service_Order_Line_Item__r.Service_Order_Header__r.Transaction_Type__r.Type__c, &apos;Stock Unit&apos;)
			),
			&quot;Service - Internal&quot;,
			&quot;Service - Customer&quot;
		)
	),
	&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts To Pull Sale Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Item_Profit__c</fullName>
        <formula>IF(AND(Fee__c != null, NOT(Fee__r.Is_Include_In_Profit_Calculation__c)),
            0,
            Revenue__c - IF(Part__c != null, Adjusted_Cost_Coli__c, 0)
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Item Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Fee_Sales__c</fullName>
        <formula>IF(
Fee__c != null,
Sub_Total_Without_Tax__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Fee Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Part_Sales__c</fullName>
        <formula>IF(
Part__c != null,
Sub_Total_Without_Tax__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Part Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Overrides__c</fullName>
        <formula>Retail__c -  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Overrides</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_When_Tax_Included__c</fullName>
        <label>Price When Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty_Committed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Pulled_Formula__c</fullName>
        <formula>IF(
	ISBLANK(Pulled__c),
	0,
	VALUE( Pulled__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty Pulled Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_To_Order__c</fullName>
        <formula>Qty__c -  Qty_Committed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty To Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_To_Pull__c</fullName>
        <formula>Qty__c - Qty_Pulled_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty To Pull</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Option_And_Fees__c</fullName>
        <description>Related Option And Fee Ids</description>
        <label>Related Option And Fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <label>Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <formula>Price__c * Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Section_Identifier__c</fullName>
        <label>Section Identifier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>Service Job 1</fullName>
                </value>
                <value>
                    <fullName>Service Job 2</fullName>
                </value>
                <value>
                    <fullName>Unit 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section_Type__c</fullName>
        <label>Section Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Stock</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Total_With_Tax_Clearfix__c</fullName>
        <formula>(Qty__c * Price__c) + Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total With Tax Clearfix</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Total_With_Tax__c</fullName>
        <description>Subtotal value with tax</description>
        <formula>(Qty__c * Price__c) +  Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Total_Without_Tax__c</fullName>
        <formula>Price__c * Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total Without Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotal_When_Tax_Included__c</fullName>
        <formula>Qty__c *  Price_When_Tax_Included__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal When Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_Clearfix__c</fullName>
        <formula>(Qty__c * Price__c * Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount Clearfix</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_When_Tax_Included__c</fullName>
        <label>Tax Amount When Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>(Qty__c * Price__c * Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>IF(
Part__c != null,
Adjusted_Cost_Coli__c,
IF(
Fee__c != null,
0,
0
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <formula>IF(
(Part__c != null || (Fee__c != null &amp;&amp; Fee__r.Is_Include_In_Profit_Calculation__c)) ,
(Qty__c * Price__c) - Total_Cost__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <formula>Invoice_Number__r.Tracking_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shop Supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Unique identifier to map on UI.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier to map on UI.</inlineHelpText>
        <label>UUID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Number__c</fullName>
        <label>VO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Status__c</fullName>
        <label>VO Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Header</label>
        <referenceTo>Vendor_Order_Header__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CO Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COLI-{00000000}</displayFormat>
        <label>CO Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Qty_in_case_of_Sublet_type</fullName>
        <active>true</active>
        <description>In case of Sublet Type, Qty should be one (1).</description>
        <errorConditionFormula>IF( (Text(Item_Type__c) == &apos;Sublet&apos; &amp;&amp;  Qty__c != 1), true, false)</errorConditionFormula>
        <errorDisplayField>Qty__c</errorDisplayField>
        <errorMessage>For Sublet Item Type, Qty should be 1.</errorMessage>
    </validationRules>
</CustomObject>